--- a/notebooks/05.a.Test_driven_development.ipynb
+++ b/notebooks/05.a.Test_driven_development.ipynb
@@ -183,11 +183,41 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Syntaxfehler.\n",
+      "Syntaxfehler.\n",
+      "Syntaxfehler.\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir ../peak_finder\n",
     "!mkdir ../tests\n",
     "!mkdir ../docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path(\"../peak_finder\").mkdir(exist_ok = True)\n",
+    "Path(\"../tests\").mkdir(exist_ok = True)\n",
+    "Path(\"../docs\").mkdir(exist_ok = True)"
    ]
   },
   {
@@ -220,32 +250,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pip\n",
-      "  Using cached pip-21.3.1-py3-none-any.whl (1.7 MB)\n",
-      "Installing collected packages: pip\n",
-      "  Attempting uninstall: pip\n",
-      "    Found existing installation: pip 20.1.1\n",
-      "    Uninstalling pip-20.1.1:\n",
-      "      Successfully uninstalled pip-20.1.1\n",
-      "Successfully installed pip-21.3.1\n",
-      "Requirement already satisfied: pytest in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (6.2.5)\n",
-      "Requirement already satisfied: toml in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (0.10.2)\n",
-      "Requirement already satisfied: packaging in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (21.2)\n",
-      "Requirement already satisfied: importlib-metadata>=0.12 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (4.8.2)\n",
-      "Requirement already satisfied: iniconfig in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (1.1.1)\n",
-      "Requirement already satisfied: pluggy<2.0,>=0.12 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (1.0.0)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (21.2.0)\n",
-      "Requirement already satisfied: py>=1.8.2 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from pytest) (1.11.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from importlib-metadata>=0.12->pytest) (3.10.0.2)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from importlib-metadata>=0.12->pytest) (3.6.0)\n",
-      "Requirement already satisfied: pyparsing<3,>=2.0.2 in /Users/fu/dev/_teaching/advanced_python_2021-22_HD/.venv/lib/python3.7/site-packages (from packaging->pytest) (2.4.7)\n"
+      "Requirement already satisfied: pip in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (21.3.1)\n",
+      "Requirement already satisfied: pytest in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (6.2.5)\n",
+      "Requirement already satisfied: atomicwrites>=1.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.4.0)\n",
+      "Requirement already satisfied: toml in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.10.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.4.4)\n",
+      "Requirement already satisfied: py>=1.8.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.11.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (21.2.0)\n",
+      "Requirement already satisfied: iniconfig in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.1.1)\n",
+      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (21.2)\n",
+      "Requirement already satisfied: pluggy<2.0,>=0.12 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.0.0)\n",
+      "Requirement already satisfied: pyparsing<3,>=2.0.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from packaging->pytest) (2.4.7)\n"
      ]
     }
    ],
@@ -264,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -292,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../peak_finder/basic.py\n"
+      "Overwriting ../peak_finder/basic.py\n"
      ]
     }
    ],
@@ -334,7 +356,7 @@
     "        This is just a place holder for the TDD part :)\n",
     "\n",
     "    \"\"\"\n",
-    "    return\n"
+    "    return [2]\n"
    ]
   },
   {
@@ -346,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../tests/test_basic.py\n"
+      "Writing ../tests/test_basic.py\n"
      ]
     }
    ],
@@ -515,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
