--- a/notebooks/05.a.Test_driven_development.ipynb
+++ b/notebooks/05.a.Test_driven_development.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,21 @@
     "        This is just a place holder for the TDD part :)\n",
     "\n",
     "    \"\"\"\n",
-    "    return [2]\n"
+    "    peaks = []\n",
+    "    for i in range(len(list_of_intensities)):\n",
+    "        if type(list_of_intensities[i]) in \n",
+    "        if i==0:\n",
+    "            if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                peaks.append(list_of_intensities[i])\n",
+    "        elif i != 0 and i != len(list_of_intensities):\n",
+    "            if list_of_intensities[i-1] < list_of_intensities[i] > list_of_intensities[i+1]:\n",
+    "                peaks.append(list_of_intensities[i])\n",
+    "        elif i==len(list_of_intensities):\n",
+    "            if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                peaks.append(list_of_intensities[i])\n",
+    "\n",
+    "\n",
+    "    return peaks\n"
    ]
   },
   {
@@ -368,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../tests/test_basic.py\n"
+      "Overwriting ../tests/test_basic.py\n"
      ]
     }
    ],
@@ -398,7 +412,15 @@
     "\n",
     "def test_find_peaks():\n",
     "    peaks = peak_finder.basic.find_peaks([0, 2, 1])\n",
-    "    assert peaks == [2] "
+    "    assert peaks == [2] \n",
+    "\n",
+    "def test_find_peaks_example():\n",
+    "    peaks = peak_finder.basic.find_peaks([1,5,6,4,1,2,3,2])\n",
+    "    assert peaks == [6,3]\n",
+    "\n",
+    "def test_rand_is_gr():\n",
+    "    peaks = peak_finder.basic.find_peaks([6,1,0])\n",
+    "    assert peaks == [6]"
    ]
   },
   {
@@ -537,23 +559,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p ../.github/workflows"
+    "# !mkdir -p ../.github/workflows\n",
+    "# Path(\"../.github/workflows\").mkdir(exist_ok=True)\n",
+    "Path(\"../.github\").mkdir(exist_ok=True)\n",
+    "\n",
+    "Path(\"../.github/workflows\").mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../.github/workflows/pytest.yml\n"
+      "Overwriting ../.github/workflows/pytest.yml\n"
      ]
     }
    ],
@@ -563,6 +589,10 @@
     "on:\n",
     "  pull_request:\n",
     "    types: [opened, synchronize, reopened, edited]\n",
+    "  push:\n",
+    "    branches:\n",
+    "      -main\n",
+    "      -master\n",
     "\n",
     "jobs:\n",
     "  build:\n",
@@ -637,9 +667,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sphinx\n",
+      "  Downloading Sphinx-4.3.0-py3-none-any.whl (3.1 MB)\n",
+      "Collecting alabaster<0.8,>=0.7\n",
+      "  Downloading alabaster-0.7.12-py2.py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: colorama>=0.3.5 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (0.4.4)\n",
+      "Collecting sphinxcontrib-devhelp\n",
+      "  Downloading sphinxcontrib_devhelp-1.0.2-py2.py3-none-any.whl (84 kB)\n",
+      "Collecting sphinxcontrib-qthelp\n",
+      "  Downloading sphinxcontrib_qthelp-1.0.3-py2.py3-none-any.whl (90 kB)\n",
+      "Collecting docutils<0.18,>=0.14\n",
+      "  Downloading docutils-0.17.1-py2.py3-none-any.whl (575 kB)\n",
+      "Collecting imagesize\n",
+      "  Downloading imagesize-1.3.0-py2.py3-none-any.whl (5.2 kB)\n",
+      "Collecting requests>=2.5.0\n",
+      "  Downloading requests-2.26.0-py2.py3-none-any.whl (62 kB)\n",
+      "Collecting Jinja2>=2.3\n",
+      "  Downloading Jinja2-3.0.3-py3-none-any.whl (133 kB)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (49.2.1)\n",
+      "Collecting babel>=1.3\n",
+      "  Downloading Babel-2.9.1-py2.py3-none-any.whl (8.8 MB)\n",
+      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (21.2)\n",
+      "Requirement already satisfied: Pygments>=2.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.10.0)\n",
+      "Collecting sphinxcontrib-jsmath\n",
+      "  Downloading sphinxcontrib_jsmath-1.0.1-py2.py3-none-any.whl (5.1 kB)\n",
+      "Collecting sphinxcontrib-htmlhelp>=2.0.0\n",
+      "  Downloading sphinxcontrib_htmlhelp-2.0.0-py2.py3-none-any.whl (100 kB)\n",
+      "Collecting sphinxcontrib-serializinghtml>=1.1.5\n",
+      "  Downloading sphinxcontrib_serializinghtml-1.1.5-py2.py3-none-any.whl (94 kB)\n",
+      "Collecting sphinxcontrib-applehelp\n",
+      "  Downloading sphinxcontrib_applehelp-1.0.2-py2.py3-none-any.whl (121 kB)\n",
+      "Collecting snowballstemmer>=1.1\n",
+      "  Downloading snowballstemmer-2.1.0-py2.py3-none-any.whl (93 kB)\n",
+      "Requirement already satisfied: pytz>=2015.7 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from babel>=1.3->sphinx) (2021.3)\n",
+      "Collecting MarkupSafe>=2.0\n",
+      "  Downloading MarkupSafe-2.0.1-cp39-cp39-win_amd64.whl (14 kB)\n",
+      "Collecting certifi>=2017.4.17\n",
+      "  Downloading certifi-2021.10.8-py2.py3-none-any.whl (149 kB)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from requests>=2.5.0->sphinx) (1.26.7)\n",
+      "Collecting charset-normalizer~=2.0.0\n",
+      "  Downloading charset_normalizer-2.0.7-py3-none-any.whl (38 kB)\n",
+      "Collecting idna<4,>=2.5\n",
+      "  Downloading idna-3.3-py3-none-any.whl (61 kB)\n",
+      "Requirement already satisfied: pyparsing<3,>=2.0.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from packaging->sphinx) (2.4.7)\n",
+      "Installing collected packages: MarkupSafe, idna, charset-normalizer, certifi, sphinxcontrib-serializinghtml, sphinxcontrib-qthelp, sphinxcontrib-jsmath, sphinxcontrib-htmlhelp, sphinxcontrib-devhelp, sphinxcontrib-applehelp, snowballstemmer, requests, Jinja2, imagesize, docutils, babel, alabaster, sphinx\n",
+      "Successfully installed Jinja2-3.0.3 MarkupSafe-2.0.1 alabaster-0.7.12 babel-2.9.1 certifi-2021.10.8 charset-normalizer-2.0.7 docutils-0.17.1 idna-3.3 imagesize-1.3.0 requests-2.26.0 snowballstemmer-2.1.0 sphinx-4.3.0 sphinxcontrib-applehelp-1.0.2 sphinxcontrib-devhelp-1.0.2 sphinxcontrib-htmlhelp-2.0.0 sphinxcontrib-jsmath-1.0.1 sphinxcontrib-qthelp-1.0.3 sphinxcontrib-serializinghtml-1.1.5\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install sphinx"
    ]
