--- a/notebooks/05.a.Test_driven_development.ipynb
+++ b/notebooks/05.a.Test_driven_development.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "20    5  Auto documentation with Sphinx"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 124,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -259,14 +259,14 @@
      "text": [
       "Requirement already satisfied: pip in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (21.3.1)\n",
       "Requirement already satisfied: pytest in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (6.2.5)\n",
-      "Requirement already satisfied: atomicwrites>=1.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.4.0)\n",
-      "Requirement already satisfied: toml in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.10.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.4.4)\n",
-      "Requirement already satisfied: py>=1.8.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.11.0)\n",
       "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (21.2.0)\n",
-      "Requirement already satisfied: iniconfig in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.1.1)\n",
-      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (21.2)\n",
       "Requirement already satisfied: pluggy<2.0,>=0.12 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.0.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (21.2)\n",
+      "Requirement already satisfied: py>=1.8.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.11.0)\n",
+      "Requirement already satisfied: atomicwrites>=1.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.4.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.4.4)\n",
+      "Requirement already satisfied: toml in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (0.10.2)\n",
+      "Requirement already satisfied: iniconfig in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from pytest) (1.1.1)\n",
       "Requirement already satisfied: pyparsing<3,>=2.0.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from packaging->pytest) (2.4.7)\n"
      ]
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -357,21 +357,41 @@
     "\n",
     "    \"\"\"\n",
     "    peaks = []\n",
-    "    for i in range(len(list_of_intensities)):\n",
-    "        if type(list_of_intensities[i]) in \n",
-    "        if i==0:\n",
-    "            if list_of_intensities[i] > list_of_intensities[i+1]: \n",
-    "                peaks.append(list_of_intensities[i])\n",
-    "        elif i != 0 and i != len(list_of_intensities):\n",
-    "            if list_of_intensities[i-1] < list_of_intensities[i] > list_of_intensities[i+1]:\n",
-    "                peaks.append(list_of_intensities[i])\n",
-    "        elif i==len(list_of_intensities):\n",
-    "            if list_of_intensities[i] > list_of_intensities[i+1]: \n",
-    "                peaks.append(list_of_intensities[i])\n",
+    "    if all([isinstance(x, tuple) for x in list_of_intensities]):\n",
+    "        for i in range(len(list_of_intensities)):\n",
+    "            list_of_intensities[i] = sum(list_of_intensities[i])\n",
+    "            if i==0:\n",
+    "                if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                    peaks.append(list_of_intensities[i])\n",
+    "            elif i != 0 and i != len(list_of_intensities):\n",
+    "                if list_of_intensities[i-1] < list_of_intensities[i] > list_of_intensities[i+1]:\n",
+    "                    peaks.append(list_of_intensities[i])\n",
+    "            elif i==len(list_of_intensities):\n",
+    "                if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                    peaks.append(list_of_intensities[i])  \n",
+    "\n",
+    "    else:\n",
+    "        for i in range(len(list_of_intensities)):\n",
+    "            if isinstance(list_of_intensities[i], int) is False:\n",
+    "                continue\n",
+    "            if i==0:\n",
+    "                if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                    peaks.append(list_of_intensities[i])\n",
+    "            elif i != 0 and i != len(list_of_intensities):\n",
+    "                if list_of_intensities[i-1] < list_of_intensities[i] > list_of_intensities[i+1]:\n",
+    "                    peaks.append(list_of_intensities[i])\n",
+    "            elif i==len(list_of_intensities):\n",
+    "                if list_of_intensities[i] > list_of_intensities[i+1]: \n",
+    "                    peaks.append(list_of_intensities[i])\n",
     "\n",
     "\n",
     "    return peaks\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -382,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +440,16 @@
     "\n",
     "def test_rand_is_gr():\n",
     "    peaks = peak_finder.basic.find_peaks([6,1,0])\n",
-    "    assert peaks == [6]"
+    "    assert peaks == [6]\n",
+    "\n",
+    "def test_None():\n",
+    "    peaks = peak_finder.basic.find_peaks([6,1,0, None])\n",
+    "    assert peaks == [6]\n",
+    "\n",
+    "def test_tuple():\n",
+    "    peaks = peak_finder.basic.find_peaks([(20,0,0), (0,19,0), (0,0,0), (255, 255, 255)])\n",
+    "    assert peaks == (0,0,0)\n",
+    "\n"
    ]
   },
   {
@@ -559,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -667,58 +696,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sphinx\n",
-      "  Downloading Sphinx-4.3.0-py3-none-any.whl (3.1 MB)\n",
-      "Collecting alabaster<0.8,>=0.7\n",
-      "  Downloading alabaster-0.7.12-py2.py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: colorama>=0.3.5 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (0.4.4)\n",
-      "Collecting sphinxcontrib-devhelp\n",
-      "  Downloading sphinxcontrib_devhelp-1.0.2-py2.py3-none-any.whl (84 kB)\n",
-      "Collecting sphinxcontrib-qthelp\n",
-      "  Downloading sphinxcontrib_qthelp-1.0.3-py2.py3-none-any.whl (90 kB)\n",
-      "Collecting docutils<0.18,>=0.14\n",
-      "  Downloading docutils-0.17.1-py2.py3-none-any.whl (575 kB)\n",
-      "Collecting imagesize\n",
-      "  Downloading imagesize-1.3.0-py2.py3-none-any.whl (5.2 kB)\n",
-      "Collecting requests>=2.5.0\n",
-      "  Downloading requests-2.26.0-py2.py3-none-any.whl (62 kB)\n",
-      "Collecting Jinja2>=2.3\n",
-      "  Downloading Jinja2-3.0.3-py3-none-any.whl (133 kB)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (49.2.1)\n",
-      "Collecting babel>=1.3\n",
-      "  Downloading Babel-2.9.1-py2.py3-none-any.whl (8.8 MB)\n",
-      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (21.2)\n",
+      "Requirement already satisfied: sphinx in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (4.3.0)\n",
+      "Requirement already satisfied: sphinxcontrib-qthelp in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.0.3)\n",
       "Requirement already satisfied: Pygments>=2.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.10.0)\n",
-      "Collecting sphinxcontrib-jsmath\n",
-      "  Downloading sphinxcontrib_jsmath-1.0.1-py2.py3-none-any.whl (5.1 kB)\n",
-      "Collecting sphinxcontrib-htmlhelp>=2.0.0\n",
-      "  Downloading sphinxcontrib_htmlhelp-2.0.0-py2.py3-none-any.whl (100 kB)\n",
-      "Collecting sphinxcontrib-serializinghtml>=1.1.5\n",
-      "  Downloading sphinxcontrib_serializinghtml-1.1.5-py2.py3-none-any.whl (94 kB)\n",
-      "Collecting sphinxcontrib-applehelp\n",
-      "  Downloading sphinxcontrib_applehelp-1.0.2-py2.py3-none-any.whl (121 kB)\n",
-      "Collecting snowballstemmer>=1.1\n",
-      "  Downloading snowballstemmer-2.1.0-py2.py3-none-any.whl (93 kB)\n",
+      "Requirement already satisfied: imagesize in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.3.0)\n",
+      "Requirement already satisfied: sphinxcontrib-serializinghtml>=1.1.5 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.1.5)\n",
+      "Requirement already satisfied: babel>=1.3 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.9.1)\n",
+      "Requirement already satisfied: sphinxcontrib-jsmath in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.0.1)\n",
+      "Requirement already satisfied: requests>=2.5.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.26.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (21.2)\n",
+      "Requirement already satisfied: sphinxcontrib-devhelp in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.0.2)\n",
+      "Requirement already satisfied: sphinxcontrib-htmlhelp>=2.0.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.0.0)\n",
+      "Requirement already satisfied: docutils<0.18,>=0.14 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (0.17.1)\n",
+      "Requirement already satisfied: sphinxcontrib-applehelp in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (1.0.2)\n",
+      "Requirement already satisfied: snowballstemmer>=1.1 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (2.1.0)\n",
+      "Requirement already satisfied: alabaster<0.8,>=0.7 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (0.7.12)\n",
+      "Requirement already satisfied: Jinja2>=2.3 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (3.0.3)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (49.2.1)\n",
+      "Requirement already satisfied: colorama>=0.3.5 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from sphinx) (0.4.4)\n",
       "Requirement already satisfied: pytz>=2015.7 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from babel>=1.3->sphinx) (2021.3)\n",
-      "Collecting MarkupSafe>=2.0\n",
-      "  Downloading MarkupSafe-2.0.1-cp39-cp39-win_amd64.whl (14 kB)\n",
-      "Collecting certifi>=2017.4.17\n",
-      "  Downloading certifi-2021.10.8-py2.py3-none-any.whl (149 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from Jinja2>=2.3->sphinx) (2.0.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from requests>=2.5.0->sphinx) (2021.10.8)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from requests>=2.5.0->sphinx) (1.26.7)\n",
-      "Collecting charset-normalizer~=2.0.0\n",
-      "  Downloading charset_normalizer-2.0.7-py3-none-any.whl (38 kB)\n",
-      "Collecting idna<4,>=2.5\n",
-      "  Downloading idna-3.3-py3-none-any.whl (61 kB)\n",
-      "Requirement already satisfied: pyparsing<3,>=2.0.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from packaging->sphinx) (2.4.7)\n",
-      "Installing collected packages: MarkupSafe, idna, charset-normalizer, certifi, sphinxcontrib-serializinghtml, sphinxcontrib-qthelp, sphinxcontrib-jsmath, sphinxcontrib-htmlhelp, sphinxcontrib-devhelp, sphinxcontrib-applehelp, snowballstemmer, requests, Jinja2, imagesize, docutils, babel, alabaster, sphinx\n",
-      "Successfully installed Jinja2-3.0.3 MarkupSafe-2.0.1 alabaster-0.7.12 babel-2.9.1 certifi-2021.10.8 charset-normalizer-2.0.7 docutils-0.17.1 idna-3.3 imagesize-1.3.0 requests-2.26.0 snowballstemmer-2.1.0 sphinx-4.3.0 sphinxcontrib-applehelp-1.0.2 sphinxcontrib-devhelp-1.0.2 sphinxcontrib-htmlhelp-2.0.0 sphinxcontrib-jsmath-1.0.1 sphinxcontrib-qthelp-1.0.3 sphinxcontrib-serializinghtml-1.1.5\n"
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from requests>=2.5.0->sphinx) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from requests>=2.5.0->sphinx) (2.0.7)\n",
+      "Requirement already satisfied: pyparsing<3,>=2.0.2 in c:\\users\\selina ernst\\documents\\github\\advanced_python_2021-22_hd\\.venv\\lib\\site-packages (from packaging->sphinx) (2.4.7)\n"
      ]
     }
    ],
@@ -907,31 +916,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Selina Ernst\\\\Documents\\\\GitHub\\\\advanced_python_2021-22_HD\\\\notebooks'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WinError 3] Das System kann den angegebenen Pfad nicht finden: \"'/Users/fu/dev/teaching/advanced_python_2020-21_HD_pre/docs'\"\n",
+      "c:\\Users\\Selina Ernst\\Documents\\GitHub\\advanced_python_2021-22_HD\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "%cd '/Users/fu/dev/teaching/advanced_python_2020-21_HD_pre/docs'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Der Befehl \"make\" ist entweder falsch geschrieben oder\n",
+      "konnte nicht gefunden werden.\n"
+     ]
+    }
+   ],
    "source": [
     "!make html"
    ]
@@ -1028,9 +1066,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Der Befehl \"make\" ist entweder falsch geschrieben oder\n",
+      "konnte nicht gefunden werden.\n"
+     ]
+    }
+   ],
    "source": [
     "!make html;open build/html/index.html"
    ]
