--- a/exercises/day5/tests_for_Class.ipynb
+++ b/exercises/day5/tests_for_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,10 @@
     "# The first version of our function!\n",
     "# Write doc strings \n",
     "#\n",
+    "\n",
+    "from collections import deque\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objs as go\n",
     "\n",
     "class Protein:\n",
     "\n",
@@ -161,13 +165,12 @@
     "        fig = go.Figure(data = data, layout = layout)\n",
     "        return fig.show()\n",
     "\n",
-    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -218,11 +221,12 @@
     "    assert [P.ID, P.name, P.metrics, P.AAsequence, P.fasta_file, P.identifier, P.df] == [None, None, None, None, None, None, None]\n",
     "\n",
     "def test_create_df():\n",
-    "    aa_df = pd.read_csv(\"../data/amino_acid_properties.csv\")\n",
+    "    aa_df = pd.read_csv(\"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/data/amino_acid_properties.csv\")\n",
     "    aa_df = aa_df.set_index(\"1-letter code\", drop = False)\n",
     "    metrics = aa_df.to_dict()\n",
-    "    P = Protein.Protein.Protein(fasta_file = \"P32249.fasta\", metrics = metrics)\n",
-    "    assert len(P.create_df) == len(P.AAsequence)"
+    "    file = \"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/exercises/day5/P32249.fasta\"\n",
+    "    P = Protein.Protein.Protein(file = file, metrics = metrics)\n",
+    "    assert len(P.create_df()) == len(P.AAsequence)"
    ]
   }
  ],
