--- a/exercises/day5/tests_for_Class.ipynb
+++ b/exercises/day5/tests_for_Class.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +65,7 @@
     "from collections import deque\n",
     "import pandas as pd\n",
     "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
     "\n",
     "class Protein:\n",
     "\n",
@@ -116,8 +117,8 @@
     "\n",
     "    def create_df(self):\n",
     "        list = []\n",
-    "        if self.fasta_file == None and self.metrics == None:\n",
-    "            print(\"missing metrics or .fasta file\")\n",
+    "        if self.fasta_file == None or self.metrics == None:\n",
+    "            return \"missing metrics or .fasta file\"\n",
     "        else:\n",
     "            self._AAsequence = self.open_fasta_file(self.fasta_file)[1]\n",
     "            for x in self._AAsequence:\n",
@@ -163,14 +164,14 @@
     "        ]\n",
     "\n",
     "        fig = go.Figure(data = data, layout = layout)\n",
-    "        return fig.show()\n",
+    "        return fig\n",
     "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,20 @@
     "    metrics = aa_df.to_dict()\n",
     "    file = \"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/exercises/day5/P32249.fasta\"\n",
     "    P = Protein.Protein.Protein(file = file, metrics = metrics)\n",
-    "    assert len(P.create_df()) == len(P.AAsequence)"
+    "    assert len(P.create_df()) == len(P.AAsequence)\n",
+    "\n",
+    "def test_not_create_df():\n",
+    "    file = \"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/exercises/day5/P32249.fasta\"\n",
+    "    P = Protein.Protein.Protein(file = file)\n",
+    "    assert P.create_df() == \"missing metrics or .fasta file\"\n",
+    "\n",
+    "def test_plot():\n",
+    "    aa_df = pd.read_csv(\"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/data/amino_acid_properties.csv\")\n",
+    "    aa_df = aa_df.set_index(\"1-letter code\", drop = False)\n",
+    "    metrics = aa_df.to_dict()\n",
+    "    file = \"C:/Users/Selina Ernst/Documents/GitHub/advanced_python_2021-22_HD/exercises/day5/P32249.fasta\"\n",
+    "    P = Protein.Protein.Protein(file = file, metrics = metrics)\n",
+    "    isinstance(P.plot(), go._figure.Figure)"
    ]
   }
  ],
